--- a/www/chromium/files/patch-build_config_rust.gni
+++ b/www/chromium/files/patch-build_config_rust.gni
@@ -5,7 +5,7 @@
      use_unverified_rust_toolchain = false
    } else {
 -    if (host_os != "linux") {
-+    if (host_os != "linux" && host_os != "openbsd" && host_os != "freebsd") {
++    if (host_os != "linux" && host_os != "midnightbsd" && host_os != "freebsd") {
        assert(false,
               "Attempt to use Android Rust toolchain on an unsupported platform")
      }
