--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -126,6 +126,7 @@ SUBDIR += py-gstreamer1
 SUBDIR += qt5-multimedia
 SUBDIR += qt6-multimedia
 SUBDIR += quvi
+SUBDIR += ringrtc
 SUBDIR += schroedinger
 SUBDIR += smpeg
 SUBDIR += streamlink
