--- a/devel/gmake/Makefile
+++ b/devel/gmake/Makefile
@@ -13,6 +13,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		cpe tar:lz
 CPE_VENDOR=	gnu
+CPE_PRODUCT=	make
 
 GNU_CONFIGURE=	yes
 GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
