sysutils/amazon-ssm-agent: hack to build agent worker.

--- a/sysutils/amazon-ssm-agent/Makefile
+++ b/sysutils/amazon-ssm-agent/Makefile
@@ -37,9 +37,14 @@ pre-build:
 	cd ${GO_WRKSRC} && BRAZIL_PACKAGE_VERSION=${PORTVERSION} \
 	${SETENV} ${MAKE_ENV} ${GO_ENV} ${GO_CMD} run ./agent/version/versiongenerator/version-gen.go
 
+post-build:
+	cd ${WRKDIR}/src/github.com/aws/amazon-ssm-agent && \
+		GOOS=freebsd GOARCH=amd64 ${GO_CMD} build ${GO_BUILDFLAGS} -o ${WRKDIR}/bin/ssm-agent-worker -v agent/agent.go agent/agent_unix.go agent/agent_parser.go
+
 post-install:
 	${MKDIR} ${STAGEDIR}${PREFIX}/etc/amazon/ssm
 	${INSTALL_DATA} ${WRKSRC}/amazon-ssm-agent.json.template ${STAGEDIR}${PREFIX}/etc/amazon/ssm
 	${INSTALL_DATA} ${WRKSRC}/seelog_unix.xml ${STAGEDIR}${PREFIX}/etc/amazon/ssm/seelog_unix.xml.template
+	${CP} ${WRKDIR}/bin/ssm-agent-worker ${PREFIX}/bin/ssm-agent-worker
 
 .include <bsd.port.mk>
