sysutils/amazon-ssm-agent: comment out features needed for newer versions.

--- a/sysutils/amazon-ssm-agent/Makefile
+++ b/sysutils/amazon-ssm-agent/Makefile
@@ -23,8 +23,8 @@ GO_TARGET=	./agent:${PREFIX}/sbin/amazon-ssm-agent \
 		./agent/framework/processor/executer/outofproc/worker:${PREFIX}/sbin/ssm-document-worker \
 		./agent/framework/processor/executer/outofproc/sessionworker:${PREFIX}/sbin/ssm-session-worker \
 		./agent/session/logging:${PREFIX}/sbin/ssm-session-logger \
-		./agent/cli-main:${PREFIX}/sbin/ssm-cli \
-		./agent/setupcli:${PREFIX}/sbin/ssm-setup-cli
+		./agent/cli-main:${PREFIX}/sbin/ssm-cli
+#		./agent/setupcli:${PREFIX}/sbin/ssm-setup-cli
 
 USE_RC_SUBR=	amazon-ssm-agent
 
@@ -38,14 +38,14 @@ pre-build:
 	cd ${GO_WRKSRC} && BRAZIL_PACKAGE_VERSION=${PORTVERSION} \
 	${SETENV} ${MAKE_ENV} ${GO_ENV} ${GO_CMD} run ./agent/version/versiongenerator/version-gen.go
 
-post-build:
-	cd ${WRKDIR}/src/github.com/aws/amazon-ssm-agent && \
-		GOOS=freebsd GOARCH=amd64 ${GO_CMD} build ${GO_BUILDFLAGS} -o ${WRKDIR}/bin/ssm-agent-worker -v agent/agent.go agent/agent_unix.go agent/agent_parser.go
+#post-build:
+#	cd ${WRKDIR}/src/github.com/aws/amazon-ssm-agent && \
+#		GOOS=freebsd GOARCH=amd64 ${GO_CMD} build ${GO_BUILDFLAGS} -o ${WRKDIR}/bin/ssm-agent-worker -v agent/agent.go agent/agent_unix.go agent/agent_parser.go
 
 post-install:
 	${MKDIR} ${STAGEDIR}${PREFIX}/etc/amazon/ssm
 	${INSTALL_DATA} ${WRKSRC}/amazon-ssm-agent.json.template ${STAGEDIR}${PREFIX}/etc/amazon/ssm
 	${INSTALL_DATA} ${WRKSRC}/seelog_unix.xml ${STAGEDIR}${PREFIX}/etc/amazon/ssm/seelog_unix.xml.template
-	${CP} ${WRKDIR}/bin/ssm-agent-worker ${PREFIX}/bin/ssm-agent-worker
+#	${CP} ${WRKDIR}/bin/ssm-agent-worker ${PREFIX}/bin/ssm-agent-worker
 
 .include <bsd.port.mk>
