--- a/net/wifi-firmware-kmod/Makefile.inc
+++ b/net/wifi-firmware-kmod/Makefile.inc
@@ -1,5 +1,6 @@
 PORTNAME=	wifi-firmware-${FWDRV}-kmod
 PORTVERSION=	${FWDRV_VERSION}
+PORTREVISION?=	1
 CATEGORIES=	net
 MASTER_SITES=	https://git.kernel.org/pub/scm/linux/kernel/git/firmware/linux-firmware.git/plain/ \
 		https://ams.source.kernel.org/pub/scm/linux/kernel/git/firmware/linux-firmware.git/plain/ \
@@ -70,7 +71,7 @@ ${f}_PKGNAMESUFFIX=		-${f}
 ${f}_CONFLICTS_INSTALL=		${PORTNAME}
 .endfor
 
-DISTFILES=	${DISTFILES_${FLAVOR}} \
+DISTFILES=	${DISTFILES_${FLAVOR}:O:u} \
 		${DISTFILES_${FLAVOR}_lic} \
 		${LICENSE_FILE}${DISTURL_SUFFIX} \
 		WHENCE${DISTURL_SUFFIX}
@@ -85,6 +86,8 @@ USES=		uidfix
 # We do not need that anymore for the modern build but making it conditional on
 # OSVERSION seems to not add the _USES_install bits from kmod.mk.
 USES+=		kmod
+
+BOOT_LOADERCONFD=	/boot/loader.conf.d
 
 .include <bsd.port.pre.mk>
 
@@ -109,9 +112,24 @@ post-extract:
 	@${CP} ${DISTDIR}/${DIST_SUBDIR}/WHENCE${DISTURL_SUFFIX} ${WRKSRC}/WHENCE.in
 	@${SED} -e "s@%%XXX%%@${WHENCE_REGEX:Q}@g" ${FILESDIR}/WHENCE.awk.in > ${WRKSRC}/WHENCE.awk
 	@${AWK} -f ${WRKSRC}/WHENCE.awk ${WRKSRC}/WHENCE.in > ${WRKSRC}/WHENCE
+	# Do we need to set a tunable?
+	# At the moment we consider these temporary hacks.
+	# Otherwise we need a better way to express this per-port/-flavor.
+.if defined(COMPAT_LINUXKPI_SKB_MEM_LIMIT) && ${COMPAT_LINUXKPI_SKB_MEM_LIMIT} > 0
+	@${MKDIR} ${WRKSRC}/${BOOT_LOADERCONFD}
+	@${ECHO_CMD} "compat.linuxkpi.skb.mem_limit=${COMPAT_LINUXKPI_SKB_MEM_LIMIT}" >> ${WRKSRC}/${BOOT_LOADERCONFD}/${FLAVOR}.conf
+	@${ECHO_CMD} "${BOOT_LOADERCONFD}/${FLAVOR}.conf" >> ${PLIST}
+.endif
+.if defined(COMPAT_LINUXKPI_IWL_HWCRYPTO_HT_VHT) && (${COMPAT_LINUXKPI_IWL_HWCRYPTO_HT_VHT:M${FLAVOR}} != "")
+	@${MKDIR} ${WRKSRC}/${BOOT_LOADERCONFD}
+	@${ECHO_CMD} "compat.linuxkpi.80211.hw_crypto=1" >> ${WRKSRC}/${BOOT_LOADERCONFD}/iwlwifi-${FLAVOR}.conf
+	@${ECHO_CMD} "compat.linuxkpi.iwlwifi_11n_disable=0" >> ${WRKSRC}/${BOOT_LOADERCONFD}/iwlwifi-${FLAVOR}.conf
+	@${ECHO_CMD} "compat.linuxkpi.iwlwifi_disable_11ac=0" >> ${WRKSRC}/${BOOT_LOADERCONFD}/iwlwifi-${FLAVOR}.conf
+	@${ECHO_CMD} "${BOOT_LOADERCONFD}/iwlwifi-${FLAVOR}.conf" >> ${PLIST}
+.endif
 ################################################################################
 .if (${OSVERSION} >= 1500014) || (${OSVERSION} < 1500000 && ${OSVERSION} >= 1402000)
-.for _f in ${DISTFILES_${FLAVOR}}
+.for _f in ${DISTFILES_${FLAVOR}:O:u}
 	# Create firmware source directory and copy in distfile.
 	@${MKDIR} ${WRKSRC}/fw/${_f:H}
 	${CP} ${DISTDIR}/${DIST_SUBDIR}/${_f} ${WRKSRC}/fw/${_f:C@(^[^?]*)${DISTURL_SUFFIX:Q}@\1@}
@@ -120,7 +138,7 @@ post-extract:
 	(cd ${WRKSRC}/fw/ && ${FIND} . -type d -mindepth 1 | \
 	    ${AWK} -vB="${BOOTFWDIR}/" '{ sub("^./", "@dir "B); print; }') >> ${PLIST}.tmp
 	# Remove possibly duplicate @dir entries
-	@${SORT} -u ${PLIST}.tmp > ${PLIST}
+	@${SORT} -u ${PLIST}.tmp >> ${PLIST}
 .else
 ################################################################################
 # Build kernel modules.
@@ -129,7 +147,7 @@ post-extract:
 	@${SED} -e "s@%%FWDRV%%@${FWDRV}@g" \
 	    -e "s@%%FWSUBDIR%%@${FWSUBDIR}@g" \
 	    ${FILESDIR}/Makefile.inc.in > ${WRKSRC}/Makefile.inc
-.for _f in ${DISTFILES_${FLAVOR}}
+.for _f in ${DISTFILES_${FLAVOR}:O:u}
 	# We remove '.' and '-' as well as '/' as they don't work well in loader.conf.
 	@${MKDIR} ${WRKSRC}/${_f:C@(^[^?]*)${DISTURL_SUFFIX:Q}@\1@:S,.,_,g:S,-,_,g:S,/,_,g}
 	# Create subdir (firmware file) Makefile.
@@ -162,5 +180,16 @@ pre-install:
 do-install:
 	(cd ${WRKSRC}/fw/ && ${COPYTREE_SHARE} . ${FAKE_DESTDIR}/${BOOTFWDIR})
 .endif
+
+post-install:
+.if defined(COMPAT_LINUXKPI_SKB_MEM_LIMIT) && ${COMPAT_LINUXKPI_SKB_MEM_LIMIT} > 0
+	@${MKDIR} ${FAKE_DESTDIR}/${BOOT_LOADERCONFD}
+	@${INSTALL_DATA} ${WRKSRC}/${BOOT_LOADERCONFD}/${FLAVOR}.conf ${FAKE_DESTDIR}/${BOOT_LOADERCONFD}/${FLAVOR}.conf
+.endif
+.if defined(COMPAT_LINUXKPI_IWL_HWCRYPTO_HT_VHT) && (${COMPAT_LINUXKPI_IWL_HWCRYPTO_HT_VHT:M${FLAVOR}} != "")
+	@${MKDIR} ${FAKE_DESTDIR}/${BOOT_LOADERCONFD}
+	@${INSTALL_DATA} ${WRKSRC}/${BOOT_LOADERCONFD}/iwlwifi-${FLAVOR}.conf ${FAKE_DESTDIR}/${BOOT_LOADERCONFD}/iwlwifi-${FLAVOR}.conf
+.endif
+	@${DO_NADA}
 
 .include <bsd.port.post.mk>
