cpp isn't working

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [  'cpp', 'go',  'javascript', 'python', 'ruby' ]
+        language: [  'go',  'javascript', 'python', 'ruby' ]
 
     steps:
       - name: Checkout
