add mlmmj archive mid and webview

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -60,7 +60,9 @@ SUBDIR += metamail
 SUBDIR += milter-greylist
 SUBDIR += mime-construct
 SUBDIR += mlmmj
+SUBDIR += mlmmj-archive-mid
 SUBDIR += mlmmj-archiver
+SUBDIR += mlmmj-webview
 SUBDIR += msmtp
 SUBDIR += mutt
 SUBDIR += nmh
