--- a/x11/libxkbcommon/Makefile
+++ b/x11/libxkbcommon/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	libxkbcommon
-PORTVERSION=	1.6.0
+PORTVERSION=	1.8.1
 CATEGORIES=	x11
-MASTER_SITES=	https://xkbcommon.org/download/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Keymap handling library for toolkits and window systems
@@ -12,14 +11,21 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	xkeyboard-config>0:x11/xkeyboard-config
 
-USES=		bison compiler:c11 cpe gnome meson pkgconfig tar:xz
+USES=		bison compiler:c11 cpe gnome meson pkgconfig python:test \
+		shebangfix
 USE_GNOME=	libxml2
+USE_GITHUB=	yes
+GH_ACCOUNT=	xkbcommon
+GH_TAGNAME=	${GH_ACCOUNT}-${PORTVERSION}
 USE_LDCONFIG=	yes
 MESON_ARGS=	-Denable-docs=false \
 		-Dx-locale-root="${PREFIX}/lib/X11/locale" \
-		-Ddefault-rules=xorg \
 		${MESON_ARGS_${OPSYS}_${OSREL:R}}
 CPE_VENDOR=	xkbcommon
+SHEBANG_FILES=	test/xkeyboard-config-test.py.in \
+		test/*.py
+
+HAS_SYMBOL_VERSION=	${PREFIX}/lib/libxkbregistry.so.0.8.1
 
 OPTIONS_DEFINE=	EVDEV WAYLAND X11
 OPTIONS_DEFAULT=EVDEV WAYLAND X11
@@ -36,8 +42,5 @@ WAYLAND_MESON_TRUE=	enable-wayland
 X11_USES=	xorg
 X11_USE=	XORG=xcb
 X11_MESON_TRUE=	enable-x11
-
-# magus issue
-NO_TEST=	yes
 
 .include <bsd.port.mk>
