--- a/math/mpdecimal/Makefile
+++ b/math/mpdecimal/Makefile
@@ -1,28 +1,33 @@
 PORTNAME=	mpdecimal
-DISTVERSION=	2.5.1
+DISTVERSION=	4.0.0
 CATEGORIES=	math
 MASTER_SITES=	https://www.bytereef.org/software/mpdecimal/releases/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C/C++ arbitrary precision decimal floating point libraries
+WWW=		https://www.bytereef.org/mpdecimal/index.html
 
 LICENSE=	bsd2
-LICENSE_FILE=	${WRKSRC}/LICENSE.txt
+LICENSE_FILE=	${WRKSRC}/COPYRIGHT.txt
 
-USES=		gmake
+USES=		compiler:c++11-lang gmake
 
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
 USE_LDCONFIG=	yes
 ALL_TARGET=	default
-#TEST_TARGET=	check_local
-NO_TEST=	yes
+TEST_TARGET=	check_local
 
-PORTDOCS=	libmpdec++/* libmpdec/*
+.include <bsd.port.pre.mk>
 
-OPTIONS_DEFINE=	DOCS
+.if ${CHOSEN_COMPILER_TYPE} == gcc
+CONFIGURE_ARGS=	LD="${CC}" LDXX="${CXX}"
+.endif
+
+CONFIGURE_ARGS+=	LDXXFLAGS="${LDFLAGS}"
 
 post-install:
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libmpdec.so.${DISTVERSION}
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libmpdec++.so.${DISTVERSION}
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
