www/validator: fix www, pkg message

--- a/www/validator/Makefile
+++ b/www/validator/Makefile
@@ -1,14 +1,13 @@
-
-
 PORTNAME=	validator
 DISTVERSIONPREFIX=	${PORTNAME}-
 DISTVERSION=	1_3
 DISTVERSIONSUFFIX=	-release
-PORTREVISION=	5
+PORTREVISION=	6
 CATEGORIES=	www
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Markup Validation Service from the World Wide Web Consortium (W3C)
+WWW=		https://validator.w3.org/
 
 LICENSE=	W3C2002
 LICENSE_NAME=	W3C Software Notice and License (2002/12/31)
