--- a/net-mgmt/wifimgr/Makefile
+++ b/net-mgmt/wifimgr/Makefile
@@ -1,10 +1,11 @@
 PORTNAME=	wifimgr
-PORTVERSION=	1.15
+DISTVERSION=	1.25
 CATEGORIES=	net-mgmt sysutils
 MASTER_SITES=	https://opal.com/src/wifimgr/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	WiFi Networks Manager
+WWW=		https://opal.com/src/wifimgr/
 
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -12,21 +13,23 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 FAKE_OPTS=	trueprefix
 
 LIB_DEPENDS=	libfontconfig.so:x11-fonts/fontconfig \
-		libfreetype.so:print/freetype2
+		libfreetype.so:print/freetype2 \
+		libharfbuzz.so:print/harfbuzz
 
-USES=		desktop-file-utils gnome pkgconfig tar:bzip2 xorg
+USES=		desktop-file-utils gnome pkgconfig tar:xz xorg
 USE_XORG=	x11
-USE_GNOME=	cairo gtk20
+USE_GNOME=	cairo gdkpixbuf2
 INSTALLS_ICONS=	yes
 
-OPTIONS_DEFINE=	NLS
+OPTIONS_DEFINE=	GTK2 NLS
 OPTIONS_SUB=	yes
+
+GTK2_USE=	GNOME=gtk20
+GTK2_MAKE_ENV=	GTK_VERSION=2
+GTK2_USE_OFF=	GNOME=gtk30
 
 NLS_USES=	gettext-runtime gettext-tools
 NLS_CFLAGS_OFF=	-DWITHOUT_NLS
 NLS_MAKE_ENV_OFF=	WITHOUT_NLS=yes
-
-post-patch:
-	@${REINPLACE_CMD} -e 's/-o root -g wheel//' ${WRKSRC}/src/Makefile
 
 .include <bsd.port.mk>
