net/boinc-client: 8.0.2

--- a/net/boinc-client/files/boinc-client.in
+++ b/net/boinc-client/files/boinc-client.in
@@ -1,6 +1,5 @@
 #!/bin/sh
-#
-#
+
 # PROVIDE: boinc-client
 # REQUIRE: LOGIN
 # KEYWORD: shutdown
@@ -15,6 +14,8 @@
 
 name="boinc_client"
 rcvar=boinc_client_enable
+
+: ${boinc_client_svcj_options="net_basic"}
 
 load_rc_config ${name}
 : ${boinc_client_enable="NO"}
@@ -38,7 +39,7 @@ boinc_client_start()
 		return 1
 	fi
 	echo "Starting ${name}."
-	idprio 31 daemon -u ${boinc_client_user} -p ${pidfile} -f ${command} ${boinc_client_flags} ${command_args} || return 1
+	idprio 30 daemon -u ${boinc_client_user} -p ${pidfile} -f ${command} ${boinc_client_flags} ${command_args} || return 1
 }
 
 boinc_client_poststop()
